# raytracing

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  demo_animation.sh  generate-image.sh  requirements.yml
.github/workflows/: cmake.yml
docs/: index.html
docs/html/: HdrImage_8h_source.html  annotated.html  camera_8h_source.html  classInvalidPfmFileFormat.html  classes.html  demo__animation_8sh_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  fmtlib_8h_source.html  functions.html  functions_func.html  functions_vars.html  geometry_8cpp_source.html  geometry_8h_source.html  hierarchy.html  imagetracer_8cpp_source.html  imagetracer_8h_source.html  index.html  materials_8cpp_source.html  materials_8h_source.html  md_LICENCE.html  menudata.js  pages.html  pcg_8cpp_source.html  pcg_8h_source.html  ray_8h_source.html  render_8cpp_source.html  render_8h_source.html  scene__file_8cpp_source.html  scene__file_8h_source.html  shapes_8cpp_source.html  shapes_8h_source.html  structBRDF.html  structCamera-members.html  structCamera.html  structCheckeredPigment-members.html  structCheckeredPigment.html  structColor-members.html  structColor.html  (+63 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  (+13 more)
examples/: demo.txt  planets.txt  test.txt
examples/texture/: earth.pfm  jupiter.pfm
html/: HdrImage_8cpp_source.html  colors_8cpp_source.html  colors_8h_source.html  generate-image_8sh_source.html  hitrecord_8h_source.html  md_CHANGELOG.html  raytracer_8cpp_source.html  structBRDF-members.html  structGrammarError.html  structNormal.html  structPCG-members.html  structPigment-members.html  structPlane.html  structUniformPigment.html  structVec.html  unionTokenValue-members.html  unionTokenValue.html
html/search/: all_13.js  all_c.js  all_d.js  classes_2.js  functions_5.js  functions_7.js  functions_b.js  functions_d.js  pages_0.js  pages_1.js
include/: HdrImage.h  camera.h  colors.h  fmtlib.h  geometry.h  hitrecord.h  imagetracer.h  material.h  materials.h  pcg.h  ray.h  render.h  scene_file.h  shapes.h  world.h
src/: HdrImage.cpp  camera.cpp  colors.cpp  geometry.cpp  imagetracer.cpp  materials.cpp  pcg.cpp  raytracer.cpp  render.cpp  scene_file.cpp  shapes.cpp  world.cpp
test/: HdrImage.cpp  camera.cpp  colors.cpp  geometry.cpp  imagetracer.cpp  materials.cpp  pcg.cpp  ray.cpp  render.cpp  scatter_10000_rays.cpp  scene_file.cpp  shapes.cpp
